add single page integration

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,11 @@
 {{ define "side" }}
 <aside class="side col-sm-3 col-xs-12">
+    <div class="search-container">
+        <form action="#">
+            <input type="text" placeholder="Recherche.." name="search">
+            <button type="submit"><i class="fas fa-search"></i></button>
+        </form>
+    </div>
     {{ partial "side_list" . }}
 </aside>
 {{ end }}
@@ -23,7 +29,8 @@
                 {{ range $track := .Params.playlists }}<!--get the last artists-->
                     {{ $elements := split $track "/" }}
                     {{ $artist := index $elements 1 }}
-                    <li class="last-artist white background-black">
+                    <li class="last-artist background-black white">
+                        <a href="#"></a>
                         {{ $artist }}
                     </li>
                 {{ end }}
@@ -31,53 +38,10 @@
             </div>
         {{ end }}
     </div>
-    <ul class="main-list-container row"><!--all shows list-->
+    <ul class="list-container row"><!--all shows list-->
     {{ range .Pages.ByDate.Reverse }}
         <li class="main-list col-sm-6">
-            {{ if .Params.number }}
-                <h6 class="show-number background-white">
-                    {{ .Params.number }}
-                    <a href='{{ .URL }}' class="black"></a>
-                </h6>
-            {{ end }}
-            {{ if .Params.visual }}
-                <figure class="show-visual-container">
-                    <div class="show-visual" style="background-image: url('{{ .Params.visual }}');">
-                        <a href='{{ .URL }}'></a>
-                    </div>
-                </figure>
-            {{ end }}
-
-            <!--define title color-->
-            {{ $.Scratch.Set "titleColor" "black" }}<!--default color-->
-            {{ if eq .Params.categories "ailleurs" }}
-                {{ $.Scratch.Set "titleColor" "blue" }}
-            {{ else if eq .Params.categories "bagage" }}
-                {{ $.Scratch.Set "titleColor" "pink" }}
-            {{ else if eq .Params.categories "ouidire" }}
-                {{ $.Scratch.Set "titleColor" "black" }}
-            {{ end }}
-            <!---------------------->
-
-            <div class="djs-title-container">
-                {{ if .Params.djs }}
-                    <div class="djs-container">
-                        {{ range .Params.djs }}
-                            <h6 class="djs background-white">
-                                {{ . }}
-                                <a href='{{ "/djs/" | relLangURL }}{{ . | urlize }}'></a>
-                            </h6>
-                        {{ end }}
-                    </div>
-                {{ end }}
-                {{ if .Title }}
-                    <h6 class='title background-white {{ $.Scratch.Get "titleColor" }}'>
-                        {{ .Title }}
-                        <a href='{{ .URL }}'></a>
-                    </h6>
-                {{ end }}
-            </div>
-
+            {{ partial "show_item" . }}
         </li>
     {{ end }}
     </ul>
