--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -32,9 +32,9 @@
                         <a href="mailto:contact@ouidire.net" target="_blank">contact@ouidire.net</a>
                     </li>
                     <li class="col-sm-2">
-                        <a href="#" target="_blank" class="fas fa-rss"></a>
-                        <a href="#" target="_blank" class="fab fa-facebook-f"></a>
-                        <a href="#" target="_blank" class="fab fa-twitter"></a>
+                        <a href="https://feeds.feedburner.com/ouiedire" target="_blank" class="fas fa-rss"></a>
+                        <a href="https://www.facebook.com/ouiedireshow/" target="_blank" class="fab fa-facebook-f"></a>
+                        <a href="https://twitter.com/OuiedireShow" target="_blank" class="fab fa-twitter"></a>
                     </li>
                 </ul>
                 <p>Le logo a été réalisé par <a href="#" target="_blank">Otro</a>. Le code source est <a href="https://github.com/constructions-incongrues/net.ouiedire.www" target="_blank">distribué</a> sous licence <a href="https://www.gnu.org/licenses/agpl.html" target="_blank">AGPL3</a>.</p>
