--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,7 +11,8 @@
     </title>
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500" rel="stylesheet">
+    <link href="{{ .Site.BaseURL }}css/styles.css" rel="stylesheet">
 </head>
 <body>
     <header></header>
