--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "side" }}
-<aside class="side col-sm-3 col-xs-12">
+<aside class="side col-md-12 col-lg-3">
     <div class="search-container">
         <form action="#">
             <input type="text" placeholder="Recherche.." name="search">
@@ -11,7 +11,7 @@
 {{ end }}
 
 {{ define "main" }}
-<section class="main col-sm-9 col-xs-12">
+<section class="main col-md-12 col-lg-9">
     <div class="logo-ouidire">
         <a href='{{ .Site.BaseURL }}'></a>
     </div>
