--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,21 +4,23 @@
                 <div class="row">
                     <h6 class="white col-sm-2">Diffusé sur</h6>
                     <ul class="col-sm-10 row">
-                        <li class="col-sm-3">
+                        <li class="col-sm-1">
                             <a href="http://www.choq.fm/" target="_blank">choq fm</a>
                         </li>
-                        <li class="col-sm-3">
+                        <li class="col-sm-1">
                             <a href="http://www.canalb.fr/gabuzomix" target="_blank">canal b</a>
                         </li>
-                        <li class="col-sm-3">
+                        <li class="col-sm-2">
                             <a href="http://www.radioeponyme.com/programmes/ouie-dire/" target="_blank">eponyme</a>
                         </li>
-                        <li class="col-sm-3">
+                        <li class="col-sm-4">
+                            <a href="http://radio-octopus.org/" target="_blank">radio octopus</a>
+                        </li>
+                        <li class="col-sm-4">
                             <a href="http://www.vosgueules-lesmouettes.com/ouiumledire.html" target="_blank">vos gueules les mouettes</a>
                         </li>
                     </ul>
                 </div>
-                <p>Le projet <a href="{{ .Site.BaseURL }}">Ouïedire</a> est développé par <a href="https://www.helloasso.com/associations/constructions-incongrues" target="_blank">Constructions Incongrues</a> et est hébergé par <a href="http://www.pastis-hosting.net/" target="_blank">Pastis Hosting</a>.</p>
             </div>
             <div class="col-sm-6 footer-right-container">
                 <ul class="row">
@@ -37,6 +39,7 @@
                         <a href="https://twitter.com/OuiedireShow" target="_blank" class="fab fa-twitter"></a>
                     </li>
                 </ul>
+                <p>Le projet <a href="{{ .Site.BaseURL }}">Ouïedire</a> est développé par <a href="https://www.helloasso.com/associations/constructions-incongrues" target="_blank">Constructions Incongrues</a> et est hébergé par <a href="http://www.pastis-hosting.net/" target="_blank">Pastis Hosting</a>.</p>
                 <p>Le logo a été réalisé par <a href="#" target="_blank">Otro</a>. Le code source est <a href="https://github.com/constructions-incongrues/net.ouiedire.www" target="_blank">distribué</a> sous licence <a href="https://www.gnu.org/licenses/agpl.html" target="_blank">AGPL3</a>.</p>
             </div>
         </div>
